--- a/src/index.html
+++ b/src/index.html
@@ -185,8 +185,7 @@
               Sin miedo al Exito !!!
             </button>
             <button
-              id="delete_close_button"
-              class="forms__close-button close__button"
+              class="forms__close-button close__button forms_delete_close_button"
               title="cerrar"
               type="button"
             >
