--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,13 @@
                 class="forms__close-button close__button forms-profile-button"
                 title="cerrar"
                 type="button"
-              ></button>
+              >
+                <img
+                  class="forms__image-button"
+                  src="./images/formn_image.svg"
+                  alt="imagen de una X"
+                />
+              </button>
             </div>
           </dialog>
         </section>
@@ -185,7 +191,8 @@
               Sin miedo al Exito !!!
             </button>
             <button
-              class="forms__close-button close__button forms_delete_close_button"
+              id="forms_delete_close_button"
+              class="forms__close-button close__button"
               title="cerrar"
               type="button"
             >
