--- a/src/index.html
+++ b/src/index.html
@@ -124,7 +124,7 @@
         </section>
         <dialog class="form__dialog" id="popup__new-places">
           <div class="forms">
-            <h2 class="forms__title">Nueva moto</h2>
+            <h2 class="forms__title">Nueva Tarjeta</h2>
             <form class="form" id="create-card">
               <fieldset class="form__edit">
                 <input
@@ -133,7 +133,7 @@
                   class="form__input"
                   type="text"
                   id="titulo"
-                  placeholder="Nueva moto"
+                  placeholder="Nueva tarjeta"
                   minlength="2"
                   maxlength="30"
                 />
@@ -217,7 +217,7 @@
                   class="form__input"
                   type="text"
                   id="nombre"
-                  placeholder="Whiter landiez"
+                  placeholder="Nombre"
                   minlength="2"
                   maxlength="40"
                 />
@@ -232,7 +232,7 @@
                   type="text"
                   id="job_info"
                   name="job_info"
-                  placeholder="Piloto de Moto velocidad"
+                  placeholder="Descripcion"
                   minlength="2"
                   maxlength="200"
                 />
